# Rust_todolist

./: Cargo.toml  README.md
src/: aggregate.rs  command.rs  error.rs  event.rs  main.rs  query.rs  resp.rs  state.rs
src/src/: aggregate.rs  db.rs  main.rs
static/: index.html
