[package]
name = "mybank"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cqrs-es = "0.4" 
async-trait = "0.1"
tower-http = { version = "0.4", features = ["fs"] }
deadpool-postgres = "0.9.0"

